Signed-off-by: skhanizadeh <skhanizadeh@yahoo.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /Hmwk/Assignment-2/HTML5Application1/nbproject/private/
+/Hmwk/Assignment-2/truth table/nbproject/private/
+/Hmwk/Assignment-2/HTML5Application/nbproject/private/
+/Hmwk/Assignment-4/HTML5Application/nbproject/private/
